--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,53 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/activity_main"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:id="@+id/bt_implicit1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
+        android:layout_marginHorizontal="48dp"
+        android:text="@string/implicit1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/bt_implicit2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="48dp"
+        android:text="@string/implicit2"
+        app:layout_constraintEnd_toEndOf="@+id/bt_implicit1"
+        app:layout_constraintStart_toStartOf="@+id/bt_implicit1"
+        app:layout_constraintTop_toBottomOf="@+id/bt_implicit1" />
+
+    <Button
+        android:id="@+id/bt_implicit3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="48dp"
+        android:text="@string/implicit3"
+        app:layout_constraintEnd_toEndOf="@+id/bt_implicit2"
+        app:layout_constraintStart_toStartOf="@+id/bt_implicit2"
+        app:layout_constraintTop_toBottomOf="@+id/bt_implicit2" />
+
+    <Button
+        android:id="@+id/bt_goto_second_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="48dp"
+        android:layout_marginBottom="48dp"
+        android:text="@string/direct_to_second"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
