--- a/app/src/main/res/layout/item_film.xml
+++ b/app/src/main/res/layout/item_film.xml
@@ -62,6 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:padding="8dp"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_rate"
         app:layout_constraintBottom_toBottomOf="parent"
