--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -6,6 +6,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <TextView
+        android:id="@+id/tv_empty"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        tools:text="Для начала работы добавьте первую цель!"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_view"
         android:layout_width="wrap_content"
@@ -22,7 +37,7 @@
             tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             tools:spanCount="1"
             tools:listitem="@layout/item_todo_list_linear"
-            tools:itemCount="5"/>
+            tools:itemCount="0"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
