--- a/app/src/main/res/layout/item_todo_list_grid.xml
+++ b/app/src/main/res/layout/item_todo_list_grid.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="160dp"
     android:layout_height="160dp"
-    android:background="#fff"
+    android:background="@color/purple_200"
+    android:elevation="8dp"
     tools:layout_marginStart="16dp"
     tools:layout_marginEnd="16dp"
     tools:layout_marginTop="16dp"
@@ -12,13 +13,14 @@
 
     <TextView
         android:id="@+id/tv_title"
+        style="@style/Text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingStart="16dp"
         android:paddingTop="16dp"
         android:paddingEnd="16dp"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +28,7 @@
 
     <TextView
         android:id="@+id/tv_text"
+        style="@style/Text"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:paddingTop="16dp"
