--- a/app/src/main/res/layout/item_todo_list_linear.xml
+++ b/app/src/main/res/layout/item_todo_list_linear.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#fff"
+    android:background="@color/purple_200"
+    android:elevation="8dp"
     tools:layout_marginStart="16dp"
     tools:layout_marginEnd="16dp"
     tools:layout_marginTop="16dp"
@@ -12,14 +13,15 @@
 
     <TextView
         android:id="@+id/tv_title"
+        style="@style/Text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:textSize="20sp"
         android:paddingEnd="16dp"
         android:paddingStart="16dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,6 +29,7 @@
 
     <TextView
         android:id="@+id/tv_text"
+        style="@style/Text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="16sp"
