--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,14 @@
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Screen">
+        <item name="android:background">#FFFFFF</item>
+    </style>
+
+    <style name="Text">
+        <item name="android:textColor">#000000</item>
+    </style>
+
+
 </resources>
